discussion/kv_engine/169978/169978_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP - try to remove MetaRead and ReadSeqno

Change-Id: If991e61073cec1f9049454a7be364080a25e13d0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-02-04 07:26:53.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-04 07:52:03.000000000
Message: 
Patch Set 8: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4979/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4979/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18106/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18106/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17365/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17365/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25461/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25461/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17055/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17055/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5039/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5039/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15331/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/engine_testapp/mock_cookie.cc:16:1: error: unknown type name "CheckForPrivilegeAtLeastInOneCollectionFunction"; did you mean "MockCookie::CheckForPrivilegeAtLeastInOneCollectionFunction"? [clang-diagnostic-error]
CheckForPrivilegeAtLeastInOneCollectionFunction
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
MockCookie::CheckForPrivilegeAtLeastInOneCollectionFunction
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/engine_testapp/mock_cookie.h:144:11: note: "MockCookie::CheckForPrivilegeAtLeastInOneCollectionFunction" declared here
    using CheckForPrivilegeAtLeastInOneCollectionFunction =
          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15331/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/engine_testapp/mock_cookie.cc:16:1:
error: unknown type name "CheckForPrivilegeAtLeastInOneCollectionFunction"; did you mean "MockCookie::CheckForPrivilegeAtLeastInOneCollectionFunction"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15331/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43579/ : FAILURE

Compile error at ..\kv_engine\programs\engine_testapp\mock_cookie.cc(17): error C2143: syntax error: missing ";" before "MockCookie::checkForPrivilegeAtLeastInOneCollectionFunction" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43579/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36776/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36776/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16148/ : FAILURE

Compile error at [2022-02-04T07:36:50.729Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@6/kv_engine/programs/engine_testapp/mock_cookie.cc:16:1:
error: unknown type name "CheckForPrivilegeAtLeastInOneCollectionFunction"; did you mean "MockCookie::CheckForPrivilegeAtLeastInOneCollectionFunction"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16148/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14174/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
